--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <p>Some billers require multi-factor authentication (MFA) and the<code class="prettyprint">/biller/auth/step</code> route is built to submit the additional information needed. Users are first submitted via the standard authenticate process via the <code class="prettyprint">/biller/auth</code> endpoint, and the MFA data is sent through an additional request to the <code class="prettyprint">/biller/auth/step</code> route.</p>
 
-<p>For <code class="prettyprint">questions</code> (Question Based) MFA return the answers formatted as an array of strings. For <code class="prettyprint">list</code> (Code Based) MFA return the desired option by passing the <code class="prettyprint">identifier</code> field given to you from the previous authenticate response. Continue to POST to the <code class="prettyprint">/biller/auth/step</code> with the required answers until a <code class="prettyprint">200</code> status code is returned. At that point the user will be authenticated and you&rsquo;ll have access to bill data.</p>
+<p>For <code class="prettyprint">questions</code> (Question Based MFA) return the answers formatted as an array of strings. For <code class="prettyprint">list</code> (Code Based MFA) return the desired option by passing the <code class="prettyprint">identifier</code> field given to you from the previous authenticate response. Continue to POST to the <code class="prettyprint">/biller/auth/step</code> with the required answers until a <code class="prettyprint">200</code> status code is returned. At that point the user will be authenticated and you&rsquo;ll have access to bill data.</p>
 
 <h3 id="http-request">HTTP Request</h3>
 
