--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <h2 id="gaining-access">Gaining Access</h2>
 
-<p>To gain access to the Unbill API, please email <a href="mailto:hello@unbill.us">hello@unbill.us</a>. After our review process is complete, you&rsquo;ll be provided with an <code class="prettyprint">unbillKey</code> which you can use for your requests.</p>
+<p>To gain access to the Unbill API, please <a href="https://unbill.typeform.com/to/oEBbt1">fill out this form</a>. After our review process is complete, you&rsquo;ll be provided with an <code class="prettyprint">unbillKey</code> which you can use for your requests.</p>
 
           <h2 id="authentication">Authentication</h2>
 
