--- a/index.html
+++ b/index.html
@@ -954,10 +954,10 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 <p>The Unbill API provides image URL&rsquo;s for each biller&rsquo;s logo. There are two ideal ways of presenting these logos in your apps.</p>
 
 <ol>
-<li><p>When the <code class="prettyprint">company.logo.background</code> field is set to false, the logo looks best on a white background.</p>
+<li><p>When the <code class="prettyprint">company.logo.background</code> field is set to <code class="prettyprint">false</code>, the logo looks best on a white background.</p>
 
 <p><img alt="Netflix" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/netflix-logo.png" /></p></li>
-<li><p>When the <code class="prettyprint">company.logo.background</code> field is set to false, the logo looks best as a background image.</p>
+<li><p>When the <code class="prettyprint">company.logo.background</code> field is set to <code class="prettyprint">true</code>, the logo looks best as a background image.</p>
 
 <p><img alt="Varsity House" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/varsity-logo.png" /></p></li>
 </ol>
