publish: Fix docs
generated from commit a877c55d0edc2c14c6d86a754124446795dc011e

--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <h3 id="returns">Returns</h3>
 
-<p>Returns a customer object if a valid <code class="prettyprint">companyId</code> was provided.</p>
+<p>Returns a company object if a valid <code class="prettyprint">companyId</code> was provided.</p>
 
           <h2 id="search-for-companies">Search for companies</h2>
 
