--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 </tr>
 </tbody></table>
 
-<h3 id="logos">Logos</h3>
+          <h2 id="company-logos">Company logos</h2>
 
 <p>The Unbill API provides image URL&rsquo;s for each company&rsquo;s logo. There are two ideal ways of presenting these logos in your apps.</p>
 
