--- a/index.html
+++ b/index.html
@@ -967,10 +967,10 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
           <h2 id="company-logos">Company logos</h2>
 
-<p>The Unbill API provides image URL&rsquo;s for each company&rsquo;s logo. There are three ideal ways of presenting these logos in your apps.</p>
+<p>The Unbill API provides image URL&rsquo;s for each company&rsquo;s logo. For our most popular companies, we also provide a white svg logo, along with the hex color of the company&rsquo;s brand. There are three ideal ways of presenting these logos in your apps.</p>
 
 <ol>
-<li><p>When the <code class="prettyprint">company.logo.svg</code> is available, the svg logo looks on the <code class="prettyprint">company.logo.svg.color</code> background.</p>
+<li><p>When the <code class="prettyprint">company.logo.svg</code> is available, the svg logo looks best on the <code class="prettyprint">company.logo.svg.color</code> background.</p>
 
 <p><img alt="Netflix" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/netflix-svg-logo.png" /></p></li>
 <li><p>When the <code class="prettyprint">company.logo.svg</code> is not available and the <code class="prettyprint">company.logo.background</code> field is set to <code class="prettyprint">false</code>, the logo looks best on a white background.</p>
