--- a/index.html
+++ b/index.html
@@ -651,10 +651,13 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <h3 id="overdue">overdue</h3>
 
-<p>There is currently a bill balance with a due date that is in the past and needs to be paid as soon as possible. A bill is typicallly overdue when:
-1. A user adds a bill that is already overdue
-2. Default <code class="prettyprint">autopay</code> is enabled and the user has an invalid payment method.
-3. <code class="prettyprint">autopay</code> is disabled and a payment has not been scheduled via the <code class="prettyprint">/payment/make</code> endpoint.</p>
+<p>There is currently a bill balance with a due date that is in the past and needs to be paid as soon as possible. A bill is typicallly overdue when:</p>
+
+<ul>
+<li>A user adds a bill that is already overdue.</li>
+<li><code class="prettyprint">autopay</code> is enabled and the user has no payment method or a payment method on hold.</li>
+<li><code class="prettyprint">autopay</code> is disabled and a payment has not been scheduled via the <code class="prettyprint">/payment/make</code> endpoint.</li>
+</ul>
 
 <h3 id="authenticate">authenticate</h3>
 
@@ -663,6 +666,8 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 <h3 id="hold">hold</h3>
 
 <p>For a number of reasons a bill can have the status of <code class="prettyprint">hold</code>. When a bill is on hold we&rsquo;ll present you with a <code class="prettyprint">reason</code> that you in turn can present to your users. To remove this status, the user must complete whatever needs to be done with their online account as described in the <code class="prettyprint">reason</code>.</p>
+
+<p>TODO: Allow for immediate bill hold removal</p>
 
 <h3 id="upcoming">upcoming</h3>
 
