--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <h3 id="overdue">overdue</h3>
 
-<p>The due date for the bill has passed, and no payment has been made. Common reason for an overdue bill are:</p>
+<p>The due date for the bill has passed, and no payment has been made. Common reasons for an overdue bill are:</p>
 
 <ul>
 <li>A user adds a bill that is already overdue.</li>
