--- a/index.html
+++ b/index.html
@@ -1154,6 +1154,10 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <p>Retrieve a list of company categories you can use to search for companies by category <code class="prettyprint">type</code>.</p>
 
+<h3 id="http-request">HTTP Request</h3>
+
+<p><code class="prettyprint">POST https://unbill.co/partner/v2/company/categories</code></p>
+
 <h3 id="200-response-body">200 Response Body</h3>
 
 <table><thead>
