--- a/index.html
+++ b/index.html
@@ -960,6 +960,24 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <p><code class="prettyprint">POST https://unbill.co/partner/v2/bill/fix-hold</code></p>
 
+<h3 id="post-parameters">Post Parameters</h3>
+
+<table><thead>
+<tr>
+<th>Param</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code class="prettyprint">userId</code></td>
+<td>Unbill user ID.</td>
+</tr>
+<tr>
+<td><code class="prettyprint">companyId</code></td>
+<td>Unbill company ID.</td>
+</tr>
+</tbody></table>
+
 <h3 id="returns">Returns</h3>
 
 <p>Returns updated bill detail.</p>
