--- a/index.html
+++ b/index.html
@@ -982,6 +982,54 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <p>Returns updated bill detail.</p>
 
+          <h2 id="remove-bill">Remove bill</h2>
+
+<blockquote>
+<p>Sample Request</p>
+</blockquote>
+<pre class="highlight json"><code><span class="p">{</span><span class="w">
+  </span><span class="nt">"unbillKey"</span><span class="p">:</span><span class="w"> </span><span class="s2">"dc220490-e6ee-11e5-8a94-e7385a8d929e"</span><span class="p">,</span><span class="w">
+  </span><span class="nt">"userId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"56e1dbb5443b10a3bd403fcf"</span><span class="p">,</span><span class="w">
+  </span><span class="nt">"companyId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"56e1dbb5443b10a3bd403fcf"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
+
+<p>Remove a bill from a user&rsquo;s list of bills.</p>
+
+<h3 id="http-request">HTTP Request</h3>
+
+<p><code class="prettyprint">POST https://unbill.co/partner/v2/bill/remove</code></p>
+
+<h3 id="post-parameters">Post Parameters</h3>
+
+<table><thead>
+<tr>
+<th>Param</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code class="prettyprint">userId</code></td>
+<td>Unbill user ID.</td>
+</tr>
+<tr>
+<td><code class="prettyprint">companyId</code></td>
+<td>Unbill company ID.</td>
+</tr>
+</tbody></table>
+
+<blockquote>
+<p>400 Response</p>
+</blockquote>
+<pre class="highlight json"><code><span class="p">{</span><span class="w">
+  </span><span class="nt">"message"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Please provide userId and companyId."</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
+
+<h3 id="returns">Returns</h3>
+
+<p>Returns a <code class="prettyprint">200</code> response if the bill was removed successfully.</p>
+
           <h1 id="company-api">Company API</h1>
 
 <p>Company objects allow you to authenticate bills with your users. The API allows you to retrieve and search for companies.</p>
