--- a/index.html
+++ b/index.html
@@ -1804,7 +1804,7 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 <pre class="highlight json"><code><span class="p">{</span><span class="w">
   </span><span class="nt">"bank"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="nt">"routingNumber"</span><span class="p">:</span><span class="w"> </span><span class="s2">"XXXX0002"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"accountNumber"</span><span class="p">:</span><span class="w"> </span><span class="s2">"XXXX0021s"</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"accountNumber"</span><span class="p">:</span><span class="w"> </span><span class="s2">"XXXX0021"</span><span class="p">,</span><span class="w">
     </span><span class="nt">"type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"checking"</span><span class="w">
   </span><span class="p">},</span><span class="w">
   </span><span class="nt">"status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"verified"</span><span class="w">
