--- a/index.html
+++ b/index.html
@@ -747,6 +747,20 @@ To test an MFA 201 response, pass in a <code class="prettyprint">mfaTest</code> 
 
 <p>A bill <code class="prettyprint">status.image</code> can be used in your bill overview. It is a URL to a status icon.</p>
 
+<h2 id="bill-status-images">Bill status images</h2>
+
+<p>Below is a list of the images used for a bill&rsquo;s <code class="prettyprint">status.image</code>.</p>
+
+<ul>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/syncing.svg">syncing.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/overdue.svg">overdue.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/authenticate.svg">authenticate.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/hold.svg">hold.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/upcoming.svg">upcoming.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/pending.svg">pending.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/paid.svg">paid.svg</a></li>
+</ul>
+
           <h2 id="bill-headline">Bill headline</h2>
 
 <blockquote>
