publish: Fixed zero balance image
generated from commit 63168a6ec6429ced5134d67629a72609f2a0bdfa

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ https://unbill.co/partner/v2 (production)
 
 <p>Bill data is not available yet. Most common reason is that the user hasn&rsquo;t received a bill. (change image)</p>
 
-<p><img alt="Bill Syncing" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-syncing.png" /></p>
+<p><img alt="Bill Zero Balance" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/bill-zero-balance.png" /></p>
 
 <h3 id="overdue">overdue</h3>
 
@@ -774,6 +774,7 @@ https://unbill.co/partner/v2 (production)
 
 <ul>
 <li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/syncing.svg">syncing.svg</a></li>
+<li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/zero-balance.svg">zero-balance.svg</a></li>
 <li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/overdue.svg">overdue.svg</a></li>
 <li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/authenticate.svg">authenticate.svg</a></li>
 <li><a href="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/api/bill-status/hold.svg">hold.svg</a></li>
