publish: Fix broken credentials image
generated from commit e51f9fa84112bf3ce0a93af3c3b8522f41de8f93

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ https://unbill.co/partner/v2 (production)
 
 <p>Authenticate a user&rsquo;s bill credentials via Unbill. This process may take anywhere from 15-90 seconds depending on the responsiveness of the company&rsquo;s website. If a <code class="prettyprint">200</code> status code is returned, no additional MFA is required. If a <code class="prettyprint">201</code> status code is returned, additional MFA is required to authenticate with the company and must be submitted via the <code class="prettyprint">/auth/step</code> endpoint.</p>
 
-<p><img alt="Credentials View" src="images/%=config.s3%&gt;/credentials-view.png" /></p>
+<p><img alt="Credentials View" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/credentials-view.png" /></p>
 
           <h2 id="auth">Auth</h2>
 
