--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
     <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print.css" rel="stylesheet" media="print" />
       <script src="javascripts/all.js"></script>
+
+    <!-- start Mixpanel -->
+    <script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
+    </script>
+    <!-- end Mixpanel -->
+
   </head>
 
   <body class="index" data-languages="[]">
@@ -227,7 +233,7 @@ https://unbill.co/partner/v2 (production)
 <h2 id="official-libraries">Official Libraries</h2>
 
 <div class="resources">
-    <a href="https://github.com/unbill/unbill-node" target="_blank" class="resource">
+    <a id="unbill-node" href="https://github.com/unbill/unbill-node" target="_blank" class="resource">
         <img src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/node.svg" />
         <div class="content">
             <h3>Node</h3>
@@ -239,7 +245,7 @@ https://unbill.co/partner/v2 (production)
 <h2 id="official-apps">Official Apps</h2>
 
 <div class="resources">
-    <a href="https://github.com/unbill/unbill-ionic" target="_blank" class="resource">
+    <a id="unbill-ionic" href="https://github.com/unbill/unbill-ionic" target="_blank" class="resource">
         <img src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/ionic.png" />
         <div class="content">
             <h3>Ionic</h3>
@@ -2187,5 +2193,11 @@ https://unbill.co/partner/v2 (production)
           </div>
       </div>
     </div>
+    <script>
+      mixpanel.init('16aa17c5de12dd4ba07edc5c4fb73ddf');
+      mixpanel.track('Viewed Docs');
+      mixpanel.track_links('#unbill-node', 'Viewed Node Library');
+      mixpanel.track_links('#unbill-ionic', 'Viewed Ionic App');
+    </script>
   </body>
 </html>
