publish: Add description
generated from commit c1268b82603cbe55390bd513239c61e617fd7b48

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="images/favicon.ico" rel="icon" type="image/x-icon">
     <title>Unbill API</title>
+    <meta name="description" content="API for bill payments. Rent, electric, phone, loan, tv, you name it.">
 
     <style>
       .highlight table td { padding: 5px; }
