publish: Document `/client/create-token`
generated from commit 76b56fd9c0ecfab7a99f91a030ec029987366fd4

--- a/index.html
+++ b/index.html
@@ -2426,8 +2426,8 @@ https://unbill.co/partner/v2 (production)
 </tr>
 </thead><tbody>
 <tr>
-<td><code class="prettyprint">clientId</code></td>
-<td>Unbill client ID you can persist in your DB for future requests.</td>
+<td><code class="prettyprint">token</code></td>
+<td>The token to be used for SSO into applications.</td>
 </tr>
 </tbody></table>
 
