publish: Doc improvements
generated from commit e7ef0964624ae5c11be4692feddd9d982923e2c2

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ https://unbill.co/partner/v2 (production)
 
 <p><img alt="Credentials View" src="https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/credentials-view.png" /></p>
 
-          <h2 id="auth">Auth</h2>
+          <h2 id="add-auth">Add Auth</h2>
 
 <blockquote>
 <p>Sample Request</p>
