publish: Point to api@unbill.us for access
generated from commit 0ee1108d5c2af778208e9bca5b292945b075b30f

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ https://unbill.co/partner/v2 (production)
 
 <h2 id="gaining-access">Gaining Access</h2>
 
-<p>To gain access to the Unbill API, please <a href="https://unbill.typeform.com/to/oEBbt1">fill out this form</a>. After our review process is complete, you&rsquo;ll be provided with an <code class="prettyprint">apiKey</code> which you can use for your requests.</p>
+<p>To gain access to the Unbill API, please <a href="mailto:api@unbill.us">contact us</a>. After our review process is complete, you&rsquo;ll be provided with an <code class="prettyprint">apiKey</code> which you can use for your requests.</p>
 
           <h2 id="authentication">Authentication</h2>
 
